--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 absl-py==0.13.0
+click==8.0.1
+colorama==0.4.4
+flask==2.0.1
+itsdangerous==2.0.1
+jinja2==3.0.1
+markupsafe==2.0.1
 ortools==9.0.9048
 protobuf==3.17.3
 six==1.16.0
+werkzeug==2.0.1
